design: add new colors and fonts

--- a/src/Resources/styles/front/common/components/box/blog.less
+++ b/src/Resources/styles/front/common/components/box/blog.less
@@ -102,7 +102,7 @@
             margin-bottom: 6px;
             padding: 5px 12px;
 
-            color: @color-brown-light-2;
+            color: @color-base;
             background-color: @color-f;
             font-size: 13px;
             text-decoration: none;
