--- a/src/Resources/styles/front/common/components/box/chooser.less
+++ b/src/Resources/styles/front/common/components/box/chooser.less
@@ -113,7 +113,7 @@
             text-align: right;
             margin-left: auto;
 
-            color: @color-brown;
+            color: @color-price;
             font-family: @font-alt;
             font-size: 15px;
             font-weight: 800;
