--- a/src/Resources/styles/front/common/components/box/detail-add.less
+++ b/src/Resources/styles/front/common/components/box/detail-add.less
@@ -32,7 +32,7 @@
             }
 
             &--save {
-                color: @color-price-save;
+                color: @color-gray;
             }
         }
     }
