--- a/src/Resources/styles/front/common/components/box/detail.less
+++ b/src/Resources/styles/front/common/components/box/detail.less
@@ -90,7 +90,7 @@
             line-height: 30px;
             margin-bottom: 20px;
 
-            color: @color-brown;
+            color: @color-base;
             font-family: @font-alt;
             font-size: 18px;
         }
@@ -121,10 +121,8 @@
             &__link {
                 display: inline-block;
 
-                color: @color-gray-dark;
                 font-size: @font-size-small;
                 font-weight: 400;
-                text-decoration: none;
                 text-transform: uppercase;
 
                 @media @query-lg {
@@ -164,7 +162,7 @@
         }
 
         &__text {
-            color: @color-brown-light;
+            color: @color-base;
             font-size: 14px;
             font-weight: 400;
             white-space: nowrap;
@@ -182,7 +180,7 @@
         &__stores {
             padding-top: 4px;
 
-            color: @color-brown-light;
+            color: @color-base;
             font-size: 14px;
             font-weight: 700;
             white-space: nowrap;
@@ -236,7 +234,7 @@
             }
 
             &__text {
-                color: @color-brown-light;
+                color: @color-base;
             }
 
             &__text-colored {
@@ -249,7 +247,7 @@
     &__catnumber {
         text-align: right;
 
-        color: @color-brown-light;
+        color: @color-base;
         font-size: @font-size-small;
 
         &__number {
