--- a/src/Resources/styles/front/common/components/box/dropdown.less
+++ b/src/Resources/styles/front/common/components/box/dropdown.less
@@ -7,7 +7,7 @@
 @box-dropdown-padding-vertical-small: 10px;
 @box-dropdown-font-size: 15px;
 @box-dropdown-arrow-size: 8px;
-@box-dropdown-arrow-color: @color-brown-light-2;
+@box-dropdown-arrow-color: @color-primary;
 @box-dropdown-open-bottom-gap: 10px;
 @box-dropdown-min-width: 115px;
 
