--- a/src/Resources/styles/front/common/components/box/order-done.less
+++ b/src/Resources/styles/front/common/components/box/order-done.less
@@ -20,7 +20,7 @@
         line-height: 30px;
 
         font-size: 18px;
-        color: @color-brown;
+        color: @color-base;
 
         &__highlight {
             background: @color-gray;
@@ -33,7 +33,7 @@
         padding: 25px;
 
         background-color: @color-light;
-        color: @color-brown;
+        color: @color-base;
         border-radius: @radius;
 
         @media @query-md {
