--- a/src/Resources/styles/front/common/components/box/order-type.less
+++ b/src/Resources/styles/front/common/components/box/order-type.less
@@ -29,7 +29,7 @@
         margin-bottom: 10px;
         padding: 14px 20px;
 
-        color: @color-brown-light;
+        color: @color-base;
         font-weight: 400;
         text-decoration: none;
 
@@ -48,7 +48,7 @@
             margin-top: 0;
 
             border-top: 2px solid @color-add;
-            color: @color-brown;
+            color: @color-base;
             font-size: @box-order-type-font-size;
             font-weight: 700;
             background-color: @color-box;
