--- a/src/Resources/styles/front/common/components/box/special-offer.less
+++ b/src/Resources/styles/front/common/components/box/special-offer.less
@@ -67,7 +67,7 @@
             width: 100%;
             margin-top: 62px;
 
-            background-color: @color-brown;
+            background-color: @color-base;
 
             @media @query-md {
                 width: @box-special-offer-button-width;
@@ -184,7 +184,7 @@
 
                         font-weight: 400;
                         font-size: @font-size-extra-small;
-                        color: @color-brown-light;
+                        color: @color-price-old;
                         text-decoration: line-through;
                     }
 
@@ -201,7 +201,7 @@
                     display: inline-block;
 
                     font-size: 11px;
-                    color: @color-brown-light;
+                    color: @color-base;
                 }
             }
         }
