--- a/src/Resources/styles/front/common/components/in/title.less
+++ b/src/Resources/styles/front/common/components/in/title.less
@@ -2,7 +2,7 @@
     display: block;
     margin-bottom: 20px;
 
-    color: @color-brown;
+    color: @color-base;
     font-family: @font-alt;
     font-weight: 700;
 
@@ -17,7 +17,6 @@
     &--small {
         line-height: 20px;
 
-        color: @color-brown-light;
         font-size: 16px;
         font-family: @font;
         text-transform: uppercase;
