--- a/src/Resources/styles/front/common/components/in/user-text.less
+++ b/src/Resources/styles/front/common/components/in/user-text.less
@@ -11,7 +11,6 @@
 .in-user-text {
     line-height: @in-user-text-font-size + 16px;
 
-    color: @color-brown;
     font-family: @font-alt;
     font-size: @in-user-text-font-size;
 
@@ -22,7 +21,7 @@
         text-decoration: none;
 
         color: @color-base;
-        background-image: linear-gradient(to top, @color-gray-light 1px, @color-f 100%);
+        background-image: linear-gradient(to top, @color-light 1px, @color-f 100%);
         background-position: 0 23px;
         background-repeat: repeat-x;
         background-size: 2px 1px;
@@ -38,7 +37,6 @@
         margin: 0 0 @in-user-text-inner-text-gap-small 0;
         line-height: @in-user-text-font-size + 16px;
 
-        color: @color-brown;
         font-size: @in-user-text-font-size;
 
         @media @query-xl {
@@ -61,7 +59,6 @@
             margin-left: 15px;
             margin-bottom: 5px;
 
-            color: @color-brown;
             font-size: @in-user-text-font-size;
         }
 
@@ -75,7 +72,6 @@
         margin-bottom: 20px;
 
         font-size: 36px;
-        color: @color-brown;
     }
 
     &__title {
