--- a/src/Resources/styles/front/common/components/list/benefits.less
+++ b/src/Resources/styles/front/common/components/list/benefits.less
@@ -85,7 +85,7 @@
             }
 
             .svg {
-                color: @color-brown;
+                color: @color-primary;
                 font-size: @list-benefits-icon-size;
 
                 .list-benefits--small & {
@@ -98,7 +98,7 @@
             width: calc(~"@{calc-base} - @{list-benefits-icon-size}");
             padding-left: 12px;
 
-            color: @color-brown;
+            color: @color-base;
             font-size: 15px;
             font-weight: bold;
             text-transform: uppercase;
