--- a/src/Resources/styles/front/common/components/list/products.less
+++ b/src/Resources/styles/front/common/components/list/products.less
@@ -41,7 +41,6 @@
         margin-bottom: 50px;
         z-index: @z-index-normal;
 
-        color: @color-brown;
         background-color: @color-f;
         border-bottom: 1px solid @color-border;
 
@@ -146,11 +145,10 @@
 
                 font-size: @list-products-item-font-size;
                 font-weight: 400;
-                color: @color-gray-dark;
+                color: @color-base;
             }
 
             &__availability {
-                color: @color-brown-light;
                 font-size: @font-size-extra-small;
 
                 .in-badge {
@@ -222,6 +220,7 @@
                         display: block;
                         padding: 2px 0;
 
+                        color: @color-price;
                         font-size: 16px;
                         font-weight: 700;
                     }
@@ -231,7 +230,7 @@
                         padding-left: 5px;
                         font-weight: normal;
                         font-size: 13px;
-                        color: @color-brown-light;
+                        color: @color-price-old;
                         text-decoration: line-through;
                     }
 
@@ -299,7 +298,7 @@
                 line-height: @list-products-item-variants-height;
 
                 cursor: pointer;
-                color: @color-gray-dark;
+                color: @color-primary;
                 font-size: @list-products-item-variants-arrow-size;
 
                 &:hover {
@@ -307,8 +306,7 @@
                 }
 
                 &.slick-disabled {
-                    color: @color-gray-dark;
-                    opacity: 0.2;
+                    color: @color-inactive;
                 }
 
                 &--prev {
