--- a/src/Resources/styles/front/common/components/list/simple.less
+++ b/src/Resources/styles/front/common/components/list/simple.less
@@ -17,7 +17,7 @@
             text-decoration: none;
 
             .list-simple__item--lighter & {
-                color: @color-brown;
+                color: @color-base;
             }
         }
     }
