--- a/src/Resources/styles/front/common/components/table/cart.less
+++ b/src/Resources/styles/front/common/components/table/cart.less
@@ -50,7 +50,7 @@
         display: flex;
 
         &__number {
-            color: @color-gray-dark;
+            color: @color-base;
             font-size: 22px;
             font-weight: 700;
         }
@@ -100,7 +100,6 @@
                 display: block;
                 margin-bottom: 6px;
 
-                color: @color-brown-light;
                 font-size: @font-size-small;
             }
         }
@@ -119,9 +118,7 @@
                 display: block;
                 margin-top: 8px;
 
-                color: @color-brown-light;
                 font-size: @font-size-small;
-                text-decoration: underline;
             }
         }
 
@@ -143,7 +140,6 @@
                 padding-right: 5px;
                 padding-top: 2px;
 
-                color: @color-brown-light;
                 font-size: @font-size-small;
                 text-decoration: line-through;
             }
