--- a/src/Resources/styles/front/common/layout/header/search-hint.less
+++ b/src/Resources/styles/front/common/layout/header/search-hint.less
@@ -41,7 +41,6 @@
             width: calc(~"100% - @{search-hint-category-image-size}");
             padding-left: 12px;
 
-            color: @color-brown;
             font-size: @search-hint-font-size-medium;
 
             .highlight {
@@ -133,7 +132,7 @@
 
                     font-weight: normal;
                     font-size: @font-size-extra-small;
-                    color: @color-brown-light;
+                    color: @color-price-old;
                     text-decoration: line-through;
                 }
             }
