--- a/src/Resources/styles/front/common/layout/header/search.less
+++ b/src/Resources/styles/front/common/layout/header/search.less
@@ -32,7 +32,6 @@
                 padding: 0 0 0 17px;
 
                 font-size: 16px;
-                color: @color-brown;
                 border: none;
                 border-radius: @radius-small;
                 box-shadow: none;
@@ -42,17 +41,17 @@
                 }
 
                 &::-webkit-input-placeholder { /* Edge */
-                    color: @color-brown;
+                    color: @color-base;
                     opacity: 1;
                 }
                   
                 &:-ms-input-placeholder { /* Internet Explorer 10-11 */
-                    color: @color-brown;
+                    color: @color-base;
                     opacity: 1;
                 }
                   
                 &::placeholder {
-                    color: @color-brown;
+                    color: @color-base;
                     opacity: 1;
                 }
             }
