--- a/src/Resources/styles/front/common/components/box/articles.less
+++ b/src/Resources/styles/front/common/components/box/articles.less
@@ -21,7 +21,7 @@
         text-align: center;
         margin-bottom: 22px;
 
-        color: @color-brown;
+        color: @color-base;
         font-size: @font-size-extra-small;
         font-family: @font-alt;
         text-transform: uppercase;
@@ -42,9 +42,7 @@
         &__link {
             line-height: 18px;
 
-            color: @color-gray-dark;
             font-size: @font-size-small;
-            text-decoration: none;
             text-transform: uppercase;
         }
     }
