--- a/src/Resources/styles/front/common/components/box/breadcrumb.less
+++ b/src/Resources/styles/front/common/components/box/breadcrumb.less
@@ -47,7 +47,7 @@
                 opacity: 0.2;
 
                 font-size: 9px;
-                color: @color-gray-dark;
+                color: @color-primary;
             }
         }
 
