--- a/src/Resources/styles/front/common/components/box/contact.less
+++ b/src/Resources/styles/front/common/components/box/contact.less
@@ -99,7 +99,7 @@
                 margin-right: 6px;
 
                 font-size: 30px;
-                color: @color-gray-dark;
+                color: @color-primary;
             }
 
             &__link {
