--- a/src/Resources/styles/front/common/components/box/cookies.less
+++ b/src/Resources/styles/front/common/components/box/cookies.less
@@ -26,7 +26,7 @@
 
     background: @box-cookies-background;
     transition: @transition transform;
-    border: 3px solid @color-black;
+    border: 3px solid @color-border;
     border-radius: @radius;
 
     @media @query-md {
