--- a/src/Resources/styles/front/common/components/box/popup-add.less
+++ b/src/Resources/styles/front/common/components/box/popup-add.less
@@ -84,7 +84,7 @@
                 text-align: left;
                 white-space: nowrap;
 
-                color: @color-brown-light;
+                color: @color-base;
                 font-size: @font-size;
             }
 
@@ -114,7 +114,7 @@
                     }
 
                     &__old {
-                        color: @color-brown;
+                        color: @color-base;
                         font-size: @font-size-small;
                         font-weight: 400;
                         text-decoration: line-through;
@@ -134,7 +134,7 @@
                     display: block;
                     margin-bottom: 6px;
 
-                    color: @color-brown-light;
+                    color: @color-base;
                     font-size: @font-size-small;
                 }
             }
