--- a/src/Resources/styles/front/common/components/form/input-spinbox.less
+++ b/src/Resources/styles/front/common/components/form/input-spinbox.less
@@ -32,7 +32,7 @@
         top: 6px;
         left: 8px;
 
-        color: @color-brown-light;
+        color: @color-base;
         font-size: @font-size-small;
         text-transform: uppercase;
         z-index: 1;
