--- a/src/Resources/styles/front/common/components/in/article.less
+++ b/src/Resources/styles/front/common/components/in/article.less
@@ -14,7 +14,7 @@
         margin-bottom: 10px;
         text-align: left;
 
-        color: @color-brown;
+        color: @color-base;
         font-weight: 700;
         font-size: 16px;
     }
@@ -42,7 +42,7 @@
         margin-top: -20px;
         margin-bottom: 20px;
 
-        color: @color-brown-light;
+        color: @color-base;
         font-size: 13px;
         font-family: @font;
     }
