--- a/src/Resources/styles/front/common/components/in/free-transport.less
+++ b/src/Resources/styles/front/common/components/in/free-transport.less
@@ -1,6 +1,6 @@
 @in-free-transport-pipe-height: 4px;
 @in-free-transport-pipe-height-fat: 7px;
-@in-free-transport-pipe-background: #807d7d;
+@in-free-transport-pipe-background: @color-light;
 
 .in-free-transport {
     &--dark {
@@ -13,7 +13,7 @@
         text-align: center;
 
         font-size: @font-size;
-        color: @color-brown;
+        color: @color-base;
 
         &__price {
             font-weight: 700;
@@ -25,7 +25,7 @@
             text-align: center;
 
             font-weight: 700;
-            color: @color-black;
+            color: @color-base;
         }
 
         .in-free-transport--dark & {
