--- a/src/Resources/styles/front/common/components/list/article-main.less
+++ b/src/Resources/styles/front/common/components/list/article-main.less
@@ -1,4 +1,4 @@
-@list-article-main-content-bg: @color-gray-dark;
+@list-article-main-content-bg: @color-base;
 @list-article-main-image-width: 293px;
 @list-article-main-image-height: 293px;
 @list-article-main-button-max-width: 178px;
