--- a/src/Resources/styles/front/common/components/list/article-product.less
+++ b/src/Resources/styles/front/common/components/list/article-product.less
@@ -12,8 +12,6 @@
     &__item {
         margin-bottom: 25px;
 
-        color: @color-brown;
-
         &__in {
             display: flex;
             flex-direction: row;
@@ -46,7 +44,7 @@
 
                 font-size: @font-size;
                 font-weight: 400;
-                color: @color-gray-dark;
+                color: @color-base;
 
                 &:hover {
                     text-decoration: underline;
@@ -56,7 +54,6 @@
             &__availability {
                 margin-bottom: 10px;
                 
-                color: @color-brown-light;
                 font-size: @font-size-extra-small;
             }
 
@@ -68,7 +65,7 @@
                         display: block;
                         padding: 5px 0;
 
-                        color: @color-gray-dark;
+                        color: @color-price;
                         font-weight: 700;
                     }
 
@@ -77,7 +74,7 @@
                         padding-left: 5px;
                         font-weight: normal;
                         font-size: 11px;
-                        color: @color-gray-dark;
+                        color: @color-price-old;
                         text-decoration: line-through;
                     }
 
