--- a/src/Resources/styles/front/common/components/list/articles.less
+++ b/src/Resources/styles/front/common/components/list/articles.less
@@ -102,7 +102,7 @@
                 margin-bottom: 5px;
                 line-height: 30px;
 
-                color: @color-gray-dark;
+                color: @color-base;
                 font-size: 18px;
                 font-weight: 700;
                 text-decoration: none;
@@ -117,11 +117,10 @@
                 line-height: 24px;
                 margin-bottom: 10px;
 
-                color: @color-gray-dark;
+                color: @color-base;
             }
 
             &__date {
-                color: @color-brown;
                 font-size: 12px;
                 font-weight: 700;
                 font-family: @font-alt;
