--- a/src/Resources/styles/front/common/components/list/basket-additionals.less
+++ b/src/Resources/styles/front/common/components/list/basket-additionals.less
@@ -35,7 +35,7 @@
         top: calc(~"@{list-basket-additionals-item-image-size}/2");
 
         cursor: pointer;
-        color: @color-gray-dark;
+        color: @color-primary;
         font-size: @list-basket-additionals-arrow-size;
         height: @list-basket-additionals-arrow-size + 2px;
 
@@ -44,8 +44,7 @@
         }
 
         &.slick-disabled {
-            color: @color-gray-dark;
-            opacity: 0.2;
+            color: @color-inactive;
         }
 
         &--prev {
@@ -74,8 +73,6 @@
 
     &__item {
         width: calc(~"@{calc-base}/@{list-basket-additionals-item-count}");
-
-        color: @color-brown;
 
         &__in {
             display: flex;
@@ -119,7 +116,7 @@
             overflow: hidden;
 
             font-weight: 400;
-            color: @color-gray-dark;
+            color: @color-base;
         }
 
         &__info {
@@ -130,7 +127,6 @@
             &__availability {
                 margin-bottom: 10px;
                 
-                color: @color-brown-light;
                 font-size: @font-size-extra-small;
 
                 .in-badge {
@@ -163,6 +159,7 @@
                         display: block;
                         padding: 5px 0;
 
+                        color: @color-price;
                         font-size: 16px;
                         font-weight: 700;
                     }
@@ -172,7 +169,7 @@
                         padding-left: 5px;
                         font-weight: normal;
                         font-size: 11px;
-                        color: @color-brown-light;
+                        color: @color-price-old;
                         text-decoration: line-through;
                     }
 
