--- a/src/Resources/styles/front/common/core/form/btn.less
+++ b/src/Resources/styles/front/common/core/form/btn.less
@@ -72,11 +72,11 @@
         color: @color-f;
         text-transform: uppercase;
 
-        background-color: @color-black;
+        background-color: @color-base;
 
         &:hover {
             color: @color-f;
-            background-color: darken(@color-black, 5%);
+            background-color: darken(@color-base, 5%);
         }
     }
 
