--- a/src/Resources/styles/front/common/core/variables.less
+++ b/src/Resources/styles/front/common/core/variables.less
@@ -5,12 +5,12 @@
 @path-design: '../images';
 @path-font: '../fonts';
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap&subset=latin-ext');
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Kanit:300,400,500,600,700&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap&subset=latin-ext');
 
 // Fonts
-@font-base: 'Roboto Condensed', sans-serif;
-@font-alt: 'Roboto', sans-serif;
+@font-base: 'Kanit', sans-serif;
+@font-alt: 'Lato', sans-serif;
 @font: @font-base;
 
 @font-size-extra-small: 12px;
@@ -59,47 +59,41 @@
 @color-e: #eee;
 @color-f: #fff;
 
-
 //// Classic colors of design
-@color-blue: #009bd9;
-@color-green: #c0e314;
-@color-red: #eb5013;
-
-@color-black: #181a22;
-@color-pink: #ff91fa;
-@color-gray-light: #d7d9da;
-@color-gray: #8991a3;
-@color-gray-dark: #384149;
+@color-blue: #0077b3;
+@color-blue-dark: #002b41;
+@color-blue-light: #e5f1f7;
+@color-turquoise: #30b0d5;
+@color-green: #3ea938;
+@color-green-light: #85c598;
+@color-green-2: #b3ce4d;
+@color-red: #d53030;
+@color-gray: #85949f;
 @color-orange: #ffa500;
-@color-brown: #6c6868;
-@color-brown-dark: #433e3e;
-@color-brown-light: #6d6868;
-@color-brown-light-2: #646464;
 
 //// Context colors
 ////// Base color of text
-@color-base: @color-black;
+@color-base: @color-blue-dark;
 
 ////// Color, which is main in design (used in titles or links, other significant places)
-@color-primary: @color-black;
+@color-primary: @color-blue;
 
 ////// Color, which is additional in design (second main color)
 @color-add: @color-green;
 
 ////// Color, which is the most used grey in design
-@color-light: #efefef;
+@color-light: @color-blue-light;
 
 ////// Color for common prices
-@color-price: @color-gray-dark;
+@color-price: @color-base;
 ////// Color for more visible prices (main price)
-@color-price-main: @color-base;
-@color-price-old: @color-brown;
-@color-price-save: @color-pink;
-@color-price-discount: @color-pink;
+@color-price-main: @color-red;
+@color-price-old: @color-gray;
+@color-price-discount: @color-red;
 
 ////// Color for main links and its hover color
-@color-link: @color-black;
-@color-link-hover: @color-black;
+@color-link: @color-primary;
+@color-link-hover: @color-primary;
 
 ////// Special colors
 @color-info: @color-green;
@@ -107,10 +101,10 @@
 @color-warning: @color-orange;
 
 ////// Color for inactive text (muted)
-@color-inactive: @color-a;
+@color-inactive: @color-gray;
 ////// Base color of border
 @color-border: @color-light;
-@color-border-dark: #cdcdcd;
+@color-border-dark: @color-turquoise;
 ////// Base color for background of components
 @color-box: @color-light;
 
