--- a/src/Resources/styles/front/common/layout/header/cart-detail.less
+++ b/src/Resources/styles/front/common/layout/header/cart-detail.less
@@ -69,7 +69,7 @@
 
                     font-weight: normal;
                     font-size: @font-size-extra-small;
-                    color: @color-brown-light;
+                    color: @color-price-old;
                     text-decoration: line-through;
                 }
             }
@@ -78,7 +78,6 @@
                 display: inline-block;
 
                 font-size: 11px;
-                color: @color-brown-light;
             }
         }
 
@@ -87,7 +86,6 @@
             text-align: center;
 
             font-size: @font-size;
-            color: @color-brown-light;
 
             @media @query-md {
                 width: @cart-detail-item-pieces-width;
@@ -108,7 +106,7 @@
                 margin-top: 3px;
 
                 font-size: @cart-detail-remove-size;
-                color: @color-brown-light;
+                color: @color-primary;
             }
 
             &:hover {
