--- a/templates/Front/Content/Blog/Article/detail.html.twig
+++ b/templates/Front/Content/Blog/Article/detail.html.twig
@@ -77,7 +77,7 @@
                     <div class="box-blog-gallery__links">
                         {% if galleryImages|length > showGalleryMaxCount %}
                             <div class="box-blog-gallery__item box-blog-gallery__item--more js-gallery-item-more">
-                                <a href="#" class="box-blog-gallery__item__link underline">
+                                <a href="#" class="box-blog-gallery__item__link">
                                     {{ 'Další'|trans }} ({{ galleryImages|length - showGalleryMaxCount }})
                                 </a>
                             </div>
