--- a/templates/Front/Content/Blog/Category/detail.html.twig
+++ b/templates/Front/Content/Blog/Category/detail.html.twig
@@ -43,7 +43,7 @@
                                                     </span>
                                                 </div>
                                                 <a href="{{ url }}" class="list-articles-blog__item__content__title">
-                                                    <span class="underline-text">{{ blogArticle.name }}</span>
+                                                    <span>{{ blogArticle.name }}</span>
                                                 </a>
                                                 <div class="list-articles-blog__item__content__text">
                                                     {{ blogArticle.perex|striptags|raw }}
