--- a/templates/Front/Content/Order/noticeRegistered.html.twig
+++ b/templates/Front/Content/Order/noticeRegistered.html.twig
@@ -4,7 +4,7 @@
 <div class="box-order__registration__block">
     <a
         href="{{ url('front_login') }}"
-        class="underline-small js-login-in-order-window-opener"
+        class="js-login-in-order-window-opener"
         data-url="{{ url('front_login_window_form') }}"
         data-email="{{ email }}"
     >
