--- a/templates/Front/Content/Product/boxTabs.html.twig
+++ b/templates/Front/Content/Product/boxTabs.html.twig
@@ -24,7 +24,7 @@
                 <div class="in-tab__content__left">
                     {% if product.getDescription(domain.id) %}
                         <div class="in-tab__content__title js-tabs-button active" data-tab-id="description">
-                            <a href="#" class="in-tab__content__title__link underline">
+                            <a href="#" class="in-tab__content__title__link">
                                 {{ descriptionHeadline }}
                             </a>
                             <i class="svg svg-triangle"></i>
@@ -43,7 +43,7 @@
                     {% if youtubeDetails %}
                         <div id="video">
                             <div class="in-tab__content__title js-tabs-button active" data-tab-id="videos">
-                                <a href="#" class="in-tab__content__title__link underline">
+                                <a href="#" class="in-tab__content__title__link">
                                     {{ videosHeadline }}
                                 </a>
                                 <i class="svg svg-triangle"></i>
@@ -75,7 +75,7 @@
                     {% if productParameterValues > 0 %}
 
                         <div class="in-tab__content__title js-tabs-button active" data-tab-id="parameters">
-                            <a href="#" class="in-tab__content__title__link underline">
+                            <a href="#" class="in-tab__content__title__link">
                                 {{ parametersHeadline }}
                             </a>
                             <i class="svg svg-triangle"></i>
