--- a/templates/Front/Content/Product/selectedFilterBoxMacro.html.twig
+++ b/templates/Front/Content/Product/selectedFilterBoxMacro.html.twig
@@ -36,7 +36,7 @@
                     {% endfor %}
                 {% endif %}
                 <div class="box-filter__selected__remove">
-                    <a href="{{ resetUrl }}" class="box-filter__selected__remove__link underline-small js-product-filter-reset-button">
+                    <a href="{{ resetUrl }}" class="box-filter__selected__remove__link js-product-filter-reset-button">
                         {{ 'Zrušit všechny filtry'|trans }}
                     </a>
                 </div>
