--- a/templates/Front/Content/Stores/index.html.twig
+++ b/templates/Front/Content/Stores/index.html.twig
@@ -14,7 +14,7 @@
             <div class="in-tab__wrap in-tab__wrap--no-border">
                 <div class="in-tab__head text-left">
                     {% for regionId, regionText in regions %}
-                        <a href="#{{ regionId|webalize }}" class="in-tab__head__item in-tab__head__item--bottom-gap underline js-anchor-link">
+                        <a href="#{{ regionId|webalize }}" class="in-tab__head__item in-tab__head__item--bottom-gap js-anchor-link">
                             {{ regionText }}
                         </a>
                     {% endfor %}
