--- a/templates/Front/Inline/Cart/afterAddWithErrorWindow.html.twig
+++ b/templates/Front/Inline/Cart/afterAddWithErrorWindow.html.twig
@@ -15,7 +15,7 @@
         <div class="box-popup-add__action__buttons">
             <div class="box-popup-add__action__buttons__back">
                 <i class="svg svg-triangle"></i>
-                <a href="#" class="box-popup-add__action__buttons__back__link underline-small js-window-button-close">
+                <a href="#" class="box-popup-add__action__buttons__back__link js-window-button-close">
                     {{ 'Zpět do e-shopu'|trans }}
                 </a>
             </div>
