--- a/templates/Front/Inline/Product/detailAvailability.html.twig
+++ b/templates/Front/Inline/Product/detailAvailability.html.twig
@@ -13,7 +13,7 @@
             </span>
             <a
                 href="#"
-                class="box-detail__availability__stores underline-small js-detail-availability-window-opener"
+                class="box-detail__availability__stores js-detail-availability-window-opener"
                 data-product-id="{{ product.id }}"
                 >
                 {% transchoice stocksWithoutZeroQuantityOnPickupPlaceStore|length with { '%stocksWithoutZeroQuantityOnStoreCount%': stocksWithoutZeroQuantityOnPickupPlaceStore|length } %}
