--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -52,7 +52,7 @@
                                     <div class="box-contact__block box-contact__block--white-text">
                                         <div class="box-contact__block__text">
                                             <i class="svg svg-mail"></i>
-                                            <a class="box-contact__block__text__link" href="mailto:{{ getShopInfoEmail() }}" class="underline">{{ getShopInfoEmail() }}</a>
+                                            <a class="box-contact__block__text__link" href="mailto:{{ getShopInfoEmail() }}">{{ getShopInfoEmail() }}</a>
                                         </div>
                                         <div class="box-contact__block__info">
                                             {{ 'Odpovíme Vám v co nejkratší možné době.'|trans }}
