--- a/src/Resources/styles/front/common/components/in/tab.less
+++ b/src/Resources/styles/front/common/components/in/tab.less
@@ -45,7 +45,7 @@
 
             &__item {
                 float: left;
-                margin: 0 @in-tab-head-item-gap @underline-gap @in-tab-head-item-gap;
+                margin: 0 @in-tab-head-item-gap;
 
                 color: @color-base;
                 font-size: @in-tab-head-item-font-size;
