--- a/templates/Front/Content/AboutUs/info.html.twig
+++ b/templates/Front/Content/AboutUs/info.html.twig
@@ -27,7 +27,7 @@
                     <div class="box-contact__block box-contact__block--no-bottom-gap">
                         <div class="box-contact__block__text">
                             <i class="svg svg-mail"></i>
-                            <a class="box-contact__block__text__link underline" href="mailto:{{ getShopInfoEmail() }}" class="underline">{{ getShopInfoEmail() }}</a>
+                            <a class="box-contact__block__text__link" href="mailto:{{ getShopInfoEmail() }}">{{ getShopInfoEmail() }}</a>
                         </div>
                         <div class="box-contact__block__info">
                             {{ 'Odpovíme Vám v nejkratším možném termínu.'|trans }}
