--- a/templates/Front/Content/Article/footerMenu.html.twig
+++ b/templates/Front/Content/Article/footerMenu.html.twig
@@ -2,7 +2,7 @@
     <ul class="list-menu__column dont-print">
         {% for article in articles %}
             <li class="list-menu__item">
-                <a class="list-menu__item__link underline underline--light" href="{{ url('front_article_detail', { id: article.id }) }}">{{ article.name }}</a>
+                <a class="list-menu__item__link" href="{{ url('front_article_detail', { id: article.id }) }}">{{ article.name }}</a>
                 {#<span class="in-badge js-not-implemented-yet">12</span>#}
             </li>
         {% endfor %}
@@ -13,18 +13,18 @@
                         'id': constant('App\\Model\\Blog\\Category\\BlogCategory::BLOG_MAIN_PAGE_CATEGORY_ID')
                     }
                 ) }}"
-                   class="list-menu__item__link underline underline--light"
+                   class="list-menu__item__link"
                 >
                     {{ 'Blog'|trans }}
                 </a>
             </li>
             <li class="list-menu__item">
-                <a href="{{ url('front_store_index') }}" class="list-menu__item__link underline underline--light">
+                <a href="{{ url('front_store_index') }}" class="list-menu__item__link">
                     {{ 'Prodejny'|trans }}
                 </a>
             </li>
             <li class="list-menu__item">
-                <a href="{{ url('front_about_us_info') }}" class="list-menu__item__link underline underline--light">
+                <a href="{{ url('front_about_us_info') }}" class="list-menu__item__link">
                     {{ 'Kontakt'|trans }}
                 </a>
             </li>
