--- a/templates/Front/Content/Customer/orders.html.twig
+++ b/templates/Front/Content/Customer/orders.html.twig
@@ -34,7 +34,7 @@
                         </thead>
                         {% for order in orders %}
                             <tr>
-                                <td><a href="{{ url('front_customer_order_detail_registered', { orderNumber: order.number }) }}"><span class="underline-small">{{ order.number }}</span></a></td>
+                                <td><a href="{{ url('front_customer_order_detail_registered', { orderNumber: order.number }) }}"><span>{{ order.number }}</span></a></td>
                                 <td>{{ order.createdAt|formatDate }}</td>
                                 <td>
                                     <span class="margin-right-10">{{ order.status.name }}</span>
