--- a/templates/Front/Content/Login/loginForm.html.twig
+++ b/templates/Front/Content/Login/loginForm.html.twig
@@ -32,7 +32,7 @@
                     </div>
                     <div class="wrap-article__row">
                         <div class="wrap-article__row__half padding-top-15 padding-bottom-15">
-                            <a href="{{ url('front_registration_reset_password') }}"><span class="underline-small">{{ 'Forgot your password?'|trans }}</span></a>
+                            <a href="{{ url('front_registration_reset_password') }}"><span>{{ 'Forgot your password?'|trans }}</span></a>
                         </div>
                         <div class="wrap-article__row__half text-right">
                             {{ form_widget(form.login, {label: 'Log in'|trans}) }}
