--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -44,7 +44,7 @@
                         <div class="box-gallery__links">
                             {% if galleryImages|length > showGalleryMaxCount %}
                                 <div class="box-gallery__item box-gallery__item--more js-gallery-item-more">
-                                    <a href="#" class="box-gallery__item__link underline">
+                                    <a href="#" class="box-gallery__item__link">
                                         {{ 'Další'|trans }} ({{ galleryImages|length - showGalleryMaxCount }})
                                     </a>
                                 </div>
