--- a/templates/Front/Content/Product/detail.html.twig
+++ b/templates/Front/Content/Product/detail.html.twig
@@ -52,7 +52,7 @@
                     </div>
                     {% include 'Front/Content/Article/list.html.twig' with { blogArticles: productBlogArticles } %}
                     <div class="box-articles__bottom box-articles__bottom--small-gap">
-                        <a href="{{ url('front_blogcategory_detail', { id: constant('App\\Model\\Blog\\Category\\BlogCategory::BLOG_MAIN_PAGE_CATEGORY_ID')}) }}" class="box-articles__bottom__link underline">{{ 'Přejít na výpis všech článků'|trans }}</a>
+                        <a href="{{ url('front_blogcategory_detail', { id: constant('App\\Model\\Blog\\Category\\BlogCategory::BLOG_MAIN_PAGE_CATEGORY_ID')}) }}" class="box-articles__bottom__link">{{ 'Přejít na výpis všech článků'|trans }}</a>
                     </div>
                 </div>
             </div>
