--- a/templates/Front/Inline/Breadcrumb/breadcrumb.html.twig
+++ b/templates/Front/Inline/Breadcrumb/breadcrumb.html.twig
@@ -2,13 +2,13 @@
     <div class="web__line">
         <div class="web__container">
             <div class="box-breadcrumb">
-                <a href="{{ url('front_homepage') }}" class="box-breadcrumb__item underline">
+                <a href="{{ url('front_homepage') }}" class="box-breadcrumb__item">
                     {{ 'Úvod'|trans }}
                 </a>
                 {% for breadcrumbItem in breadcrumbItems %}
                     <span class="box-breadcrumb__item box-breadcrumb__item--separator"><i class="svg svg-arrow"></i></span>
                     {% if breadcrumbItem.routeName is not null %}
-                        <a href="{{ url(breadcrumbItem.routeName, breadcrumbItem.routeParameters) }}" class="box-breadcrumb__item underline">
+                        <a href="{{ url(breadcrumbItem.routeName, breadcrumbItem.routeParameters) }}" class="box-breadcrumb__item">
                             {{- breadcrumbItem.name -}}
                         </a>
                     {% else %}
