--- a/templates/Front/Inline/Common/servicesArticlesList.html.twig
+++ b/templates/Front/Inline/Common/servicesArticlesList.html.twig
@@ -1,7 +1,7 @@
 <div class="box-contact__right__list">
     <ul class="list-simple">
         <li class="list-simple__item list-simple__item--lighter">
-            <a href="{{ url('front_article_detail', { id: loyaltyProgramArticle.id }) }}" class="list-simple__item__link"><span class="underline-text">{{ 'Co je Věrnostní program?'|trans }}</span></a>
+            <a href="{{ url('front_article_detail', { id: loyaltyProgramArticle.id }) }}" class="list-simple__item__link">{{ 'Co je Věrnostní program?'|trans }}</a>
         </li>
     </ul>
 </div>
