--- a/templates/Front/Layout/layout.html.twig
+++ b/templates/Front/Layout/layout.html.twig
@@ -65,7 +65,7 @@
                 <button class="btn btn--success box-cookies__buttons__agree js-eu-cookies-consent-button" type="button">{{ 'V pořádku'|trans }}</button>
                 <span class="box-cookies__buttons__link__wrap">
                     {% if cookiesArticle is not null %}
-                        <a class="box-cookies__buttons__link underline" href="{{ url('front_article_detail', { id: cookiesArticle.id }) }}" target="_blank">
+                        <a class="box-cookies__buttons__link" href="{{ url('front_article_detail', { id: cookiesArticle.id }) }}" target="_blank">
                             {{- 'More information'|trans -}}
                         </a>
                     {% endif %}
